@@ -1,3 +1,7 @@
+2011-05-16  Ian Lance Taylor  <iant@google.com>
+
+	* testsuite/tls_test_main.cc: Use semaphores instead of mutexes.
+
 2011-05-10 Cary Coutant  <ccoutant@google.com>
 
 	* object.cc (Sized_relobj::do_count_local_symbols): Check for
